# halflife-traced

./: CMakeLists.txt
dlls/: CMakeLists.txt  cbase.cpp  cbase.h  client.cpp  client.h  extdll.h  game.cpp  game.h  h_export.cpp  tracelog.cpp  tracelog.h  util.h  world.cpp
pm_shared/: CMakeLists.txt  pm_shared.c
